trying to validate Pet construction; probably need a factory; builder() model works thought as an option; maybe a factory builder option;  (lol);