@@ -128,7 +128,7 @@
 		                </annotationProcessorPaths>
 	        			<compilerArgs>
 		        			<arg>-parameters</arg>
-							<!-- <arg>-XX:+EnableDynamicAgentLoading</arg> -->
+							<!-- <arg>-Amapstruct.verbose=true</arg> -->
 	        			</compilerArgs>
         			</configuration>
 		    	</plugin>
